Updated package and org name.

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = aniry_shopping_list
+PRODUCT_NAME = aniry
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.aniryShoppingList
+PRODUCT_BUNDLE_IDENTIFIER = com.bl.aniry
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.bl. All rights reserved.
