--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "aniry_shopping_list" "\0"
+            VALUE "CompanyName", "com.bl" "\0"
+            VALUE "FileDescription", "aniry" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "aniry_shopping_list" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "aniry_shopping_list.exe" "\0"
-            VALUE "ProductName", "aniry_shopping_list" "\0"
+            VALUE "InternalName", "aniry" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.bl. All rights reserved." "\0"
+            VALUE "OriginalFilename", "aniry.exe" "\0"
+            VALUE "ProductName", "aniry" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
