--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.aniry_shopping_list">
+    package="com.bl.aniry">
    <application
-        android:label="aniry_shopping_list"
+        android:label="aniry"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
