--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   uuid: ^3.0.6
   provider: ^6.0.4
+  path_provider: ^2.0.11
+  json_serializable: ^6.5.3
+  build_runner: ^2.3.2
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
