--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   build_runner: ^2.3.2
   json_annotation: ^4.7.0
   beamer: ^1.5.3
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
