--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,3 @@
-arb-dir: lib/app/l10n
-template-arb-file: app_en.arb
+arb-dir: lib/app/messages
+template-arb-file: en.arb
 output-localization-file: app_localizations.dart
