--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   json_annotation: ^4.7.0
   beamer: ^1.5.3
   flutter_slidable: ^2.0.0
+  share_plus: ^6.0.1
+  cross_file: ^0.3.3+2
+  file_picker: ^5.2.2
 
 dev_dependencies:
   flutter_test:
