--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   share_plus: ^6.0.1
   cross_file: ^0.3.3+2
   file_picker: ^5.2.2
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_test:
