--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cross_file: ^0.3.3+2
   file_picker: ^5.2.2
   diacritic: ^0.1.3
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
