--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   file_picker: ^5.2.2
   diacritic: ^0.1.3
   collection: ^1.16.0
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
